redis-service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: redis
    role: service
  name: redis
spec:
  ports:
    - port: 6379
      targetPort: 6379
  selector:
    group: cluster-services
    project: redis
    provider: redis
